public/style/style.css
body{
  font-family: 'Nunito', sans-serif
}




.title-cover-landing {
    background-color: #F05F40;

    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    padding: 2em;
    min-height: 7em;
    margin-bottom: 1em;
}

.business-cover-landing {
    background-color: #F05F40;

    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    padding: 2em;
    min-height: 7em;
    margin-bottom: 1em;
}

.company-logo-container {
    padding-top: 1em;
    padding-bottom: 3em;
    text-align: center;



}

.company-logo-container img {

        width: 25%;
        padding-left: 1em;


}

.title-cover-left {
        display: inline-block;
        width: 0%;
    }
    .title-cover-right {
            display: inline-block;
            width: 100%;
          }
  .title-cover-right h1 {
    color: #fff;
    font-size: 2.5em;
    margin-bottom: 1.5em;

  }

  .businessRegistration-cover-left {
          display: inline-block;
          width: 0%;
      }
      .businessRegistration-cover-right {
              display: inline-block;
              width: 100%;
            }
    .businessRegistration-cover-right h1 {
      color: #fff;
      font-size: 2.5em;
      margin-bottom: 1.5em;

    }

  @media only screen and (min-width: 753px) {



        .title-cover-left {

            background-image: url("/images/onlinePhone.png");
            width: 35%;
            background-repeat:no-repeat;
   background-size:contain;
   height: 250px;

        }

        .title-cover-right {
            display: inline-block;
            width: 65%;
        }

        .businessRegistration-cover-left {

            background-image: url("/images/onlinePhone.png");

            background-repeat:no-repeat;
   background-size:contain;
   height: 250px;

        }


}


.business-card {
  border: 1px solid #cccccc;
  background: #f8f8f8;
  padding: 10px;
  border-radius: 4px;
  margin-bottom: 10px;
}

.shopList {
  margin-top:10px;
}

.input-group {
  margin: 20px 0px;
}

.menuList > .card {
  height: 100px
}

.loading-icon {
          margin-top: 0em;
          text-align: center;
      }
.googleShops {
  margin: 20px 0px;
}

.orderTable {

  overflow: auto;
}
.placeOrderButton {
  margin-top: 3em;
}

.btn-squared-default
    {
        width: 150px !important;

        font-size: 20px;
        background-color: white;
        color:black;
    }

        .btn-squared-default:hover
        {
            border: 3px solid white;
            font-weight: 800;
        }

    .btn-squared-default-plain
    {
        width: 100px !important;
        height: 100px !important;
        font-size: 10px;
    }

        .btn-squared-default-plain:hover
        {
            border: 0px solid white;
        }

        .credit-card-box .panel-title {
            display: inline;
            font-weight: bold;
        }
        .credit-card-box .form-control.error {
            border-color: red;
            outline: 0;
            box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(255,0,0,0.6);
        }
        .credit-card-box label.error {
          font-weight: bold;
          color: red;
          padding: 2px 8px;
          margin-top: 2px;
        }
        .credit-card-box .payment-errors {
          font-weight: bold;
          color: red;
          padding: 2px 8px;
          margin-top: 2px;
        }
        .credit-card-box label {
            display: block;
        }
        /* The old "center div vertically" hack */
        .credit-card-box .display-table {
            display: table;
        }
        .credit-card-box .display-tr {
            display: table-row;
        }
        .credit-card-box .display-td {
            display: table-cell;
            vertical-align: middle;
            width: 50%;
        }
        /* Just looks nicer */
        .credit-card-box .panel-heading img {
            min-width: 180px;
        }


        .item-notification-text {
            color: #f6f6f6;
            text-align: center;
            text-decoration: none;
        }

        .item-notification {
            color: #f6f6f6;
            font-size: 1.1em;
            padding-top: 0.7em;
            height: 50px;
            position: fixed;
            left: 0;
            text-align: center;
            text-decoration: none;
            top: -45px;
            width: 100%;
            animation: item-notification 1s ease forwards;
            z-index: 999999;
        }

        .add-item-notification {
            background-color: #3FB083;
        }

        .delete-item-notification {
            background-color: #E2514E;
        }

        .error-item-notification {
            background-color: #FAD675;
        }

        .item-notification-show {
            display: block;

        }

        .item-notification-hide {
            display: none;
        }

        @keyframes item-notification {
            0% { opacity: 0; }
            50% { opacity: 1; }
            100% { top: 0; }
        }

        @keyframes item-notification-hide {
            0% { top: 0 }
            50% { top: -25 }
            100% { top: -45 }
        }

